examples/errors/const_as_ref.alan
main(): proc
    foo(x: reference int): proc
    {
    }
{
    foo(42);
}